# OpenContriOS

./: .gitignore  Cargo.toml  README.md  build.sh  limine.conf  test.sh
bootloader/: Cargo.toml  OVMF_VARS.fd  README.md  boot.nasm  build.sh  i386-unknown-none.json  rust-toolchain.toml  test.sh
bootloader/src/: main.rs
kernel/: Cargo.toml  build.sh  rust-toolchain.toml
kernel/src/: main.rs
