[package]
name = "OpenContriOS"
version = "0.0.1"
edition = "2024"

[dependencies]
ovmf-prebuilt = "0.2.4"

[workspace]
resolver = "3"
members = ["kernel"]

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = { git = "https://github.com/had2020/OpenContriOS-Bootloader.git" }

[unstable]
bindeps = true

[toolchain]
channel = "nightly"
targets = ["x86_64-unknown-none"]
