[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9.7"
bootloader_api = "0.11.12"
uart_16550 = "0.4.0"
x86_64 = "0.14.1"

[build]
target = "x86_64-unknown-none"
build-std = ["core", "compiler_builtins"]

[unstable]
target = "x86_64-unknown-none"
build-std = ["core", "compiler_builtins"]
bindeps = true
